--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>cadastro-filmes</name>
     <description>cadastro-filmes</description>
     <properties>
-        <java.version>21</java.version>
+        <java.version>18</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -59,6 +59,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
