--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8080
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/filmes
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=****
 spring.jpa.hibernate.ddl-auto=update
